# Galaxy_simulation

./: .gitattributes  .gitignore  .gitmodules  Block.cpp  Block.h  CMakeLists.txt  LICENSE.md  Main.cpp  Makefile  README.md  Star.cpp  Star.h  Utils.cpp  Vector.cpp  Vector.h  imgui.ini  mingw32_launch.bat  mingw64_launch.bat  mingw_run.bat  unix_launch.sh  vs32_launch.bat  vs32_run.bat  vs64_launch.bat  vs64_run.bat
dependencies/SFML/lib/cmake/SFML/: SFMLSharedTargets-debug.cmake  SFMLStaticTargets-debug.cmake  SFMLStaticTargets-release.cmake
includes/: Block.h  Block.hpp  ComputeShader.hpp  Computer.hpp  Menu.h  Menu.hpp  Renderer.hpp  Simulation.h  Simulation.hpp  Simulator.hpp  Star.h  Star.hpp  Vector.h  block.h  libraries.hpp  star.h  utils.h  vector.h
libraries/: CMakeLists.txt
libraries/Dimension3D/includes/dim/: dimension3D.hpp
libraries/Dimension3D/includes/dim/cameras/: Camera.hpp  Camera2D.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
libraries/Dimension3D/includes/dim/controllers/: Controller.hpp  DragController.hpp  FlyController.hpp  OrbitController.hpp
libraries/Dimension3D/includes/dim/lights/: AmbientLight.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp
libraries/Dimension3D/includes/dim/objects/: Material.hpp  Mesh.hpp  Object.hpp
libraries/Dimension3D/includes/dim/opengl/: ComputeShader.hpp  FrameBuffer.hpp  Shader.hpp  Texture.hpp  VertexBuffer.hpp
libraries/Dimension3D/includes/dim/utils/: Color.hpp  libraries.hpp  utils.hpp
libraries/Dimension3D/includes/dim/vectors/: Vector2.hpp  Vector2int.hpp  Vector3.hpp  Vector3int.hpp  Vector4.hpp  Vector4int.hpp  vectors.hpp
libraries/Dimension3D/includes/dim/windows/: Scene.hpp  Window.hpp
libraries/Dimension3D/sources/: dimension3D.cpp
libraries/Dimension3D/sources/cameras/: Camera.cpp  Camera2D.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
libraries/Dimension3D/sources/controllers/: Controller.cpp  DragController.cpp  FlyController.cpp  OrbitController.cpp
libraries/Dimension3D/sources/lights/: AmbientLight.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp
libraries/Dimension3D/sources/objects/: Material.cpp  Mesh.cpp  Object.cpp
libraries/Dimension3D/sources/opengl/: ComputeShader.cpp  FrameBuffer.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
libraries/Dimension3D/sources/utils/: Color.cpp  utils.cpp
libraries/Dimension3D/sources/vectors/: Vector2.cpp  Vector2int.cpp  Vector3.cpp  Vector3int.cpp  Vector4.cpp  Vector4int.cpp  vectors.cpp
libraries/Dimension3D/sources/windows/: Scene.cpp  Window.cpp
libraries/ImGui/: imconfig.h
libraries/ImGui-SFML/: CMakeLists.txt
libraries/SFML/Clang/x64/Frameworks/SFML.framework/Versions/2.5.1/: SFML
libraries/SFML/Clang/x64/Frameworks/SFML.framework/Versions/2.5.1/Resources/: Info.plist
libraries/SFML/Clang/x64/Frameworks/SFML.framework/Versions/2.5.1/Resources/CMake/: SFMLConfig.cmake  SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake
libraries/SFML/Clang/x64/Frameworks/sfml-audio.framework/Versions/2.5.1/Resources/: Info.plist
libraries/SFML/Clang/x64/Frameworks/sfml-graphics.framework/Versions/2.5.1/Resources/: Info.plist
libraries/SFML/Clang/x64/Frameworks/sfml-network.framework/Versions/2.5.1/: sfml-network
libraries/SFML/Clang/x64/Frameworks/sfml-network.framework/Versions/2.5.1/Resources/: Info.plist
libraries/SFML/Clang/x64/Frameworks/sfml-system.framework/Versions/2.5.1/Resources/: Info.plist
libraries/SFML/Clang/x64/Frameworks/sfml-window.framework/Versions/2.5.1/Resources/: Info.plist
libraries/SFML/Clang/x64/templates/SFML/SFML App.xctemplate/: TemplateInfo.plist
libraries/SFML/Clang/x64/templates/SFML/SFML Compiler.xctemplate/: TemplateInfo.plist
libraries/SFML/GCC/x64/lib/cmake/SFML/: SFMLSharedTargets-release.cmake  SFMLSharedTargets.cmake
libraries/SFML/MinGW/x86/lib/cmake/SFML/: SFMLSharedTargets-release.cmake
shaders/: blur.frag  blur.vert  compute.comp  galaxy.frag  galaxy.vert  galaxy2.frag  galaxy2.vert  post.frag  post.vert  star.frag  star.vert  test.frag  test.vert
shaders/compute/: cl_compute_shader.cl  init_positions.comp  init_speeds.comp  integration.comp  interactions.comp
sources/: Block.cpp  ComputeShader.cpp  Computer.cpp  Menu.cpp  Renderer.cpp  Simulation.cpp  Simulator.cpp  Star.cpp  Vector.cpp  block.cpp  main.cpp  star.cpp  utils.cpp  vector.cpp
